# trading-bot-rust

./: Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  docker-compose.yml
.devcontainer/: Dockerfile-dev  devcontainer.json  docker-compose-dev.yml
.github/: publish-docker-image.yml
.github/workflows/: rust.yml
configs/: bot-btc.env  bot-etc.env  bot-mona.env  bot-plt.env  bot.env  db.env  exchange.env  slack.env
docs/: bot.plantuml
src/: bot.rs  coincheck.rs  config.rs  error.rs  lib.rs  main.rs  simulator.rs  strategy.rs  util.rs
src/bot/: action.rs  analyze.rs  base.rs  model.rs
src/coincheck/: client.rs  mock.rs  model.rs  request.rs  response.rs
src/mysql/: client.rs  model.rs
src/simulator/: base.rs  model.rs
src/slack/: client.rs
src/strategy/: base.rs  scalping.rs  util.rs
