[package]
name = "trading-bot-rust"
version = "0.1.0"
authors = ["canpok1 <6isstrong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4"
time = "*"