[package]
name = "trading_bot_rust"
version = "0.1.0"
authors = ["canpok1 <6isstrong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
env_logger = "0.8"
envy = "0.4"
log = "0.4"
mysql = "20.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "*"
tokio = { version = "1", features = ["full"] }
colored = "2"
async-trait = "*"
indoc = "1.0"
mockall = "0.10.2"
csv = "1.1.6"